<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DangKy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/dangky"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/edtName"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_person"
                android:hint="@string/hoten" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edtPhone"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/sdt"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtAddress"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_location"
                android:hint="@string/diachi" />

            <EditText
                android:id="@+id/edtBirthDay"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_calendar"
                android:hint="Ngày sinh"
                android:inputType="date" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/nhaplaimatkhau"
                android:inputType="textPassword" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDangKy"
                style="@style/button"
                android:text="@string/dangky" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/bandacotaikhoanroi"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvDangNhap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/dangnhap"
                    android:textColor="@color/orange"
                    android:textSize="14dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>