<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".DangNhap">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="-35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:cardCornerRadius="40dp">
                <FrameLayout
                    android:backgroundTint="#93242A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:adjustViewBounds="true"
                        android:background="@drawable/logo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo"
                        android:layout_marginTop="33dp"/>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edtEmail"
                style="@style/edittext"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/edittext"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="@string/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDangNhap"
                style="@style/button"
                android:text="@string/dangnhap" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:text="@string/bancotaikhoanchua"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvDangKy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:text="@string/dangky"
                    android:textColor="#93242A"
                    android:textSize="14dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/tvQuenMatKhau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quenmatkhau"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>