<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civAvatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#93242A"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/thongtincanhan"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/lnEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvSua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/s_a"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="28dp"
                        android:layout_height="1dp"
                        android:background="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tvName"
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_person"
                android:text="Trung" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_email"
                android:text="trung@gmail.com" />

            <TextView
                android:id="@+id/tvPhone"
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_phone"
                android:text="0702693599" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_location"
                android:text="24/12 Nguyen Van Cu" />

            <TextView
                android:id="@+id/tvBirtDay"
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_calendar"
                android:text="21/15/2001" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black" />

            <LinearLayout
                android:id="@+id/lnDonMua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/donmua" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/donmua"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:drawableRight="@drawable/ic_next"
                    android:gravity="right"
                    android:text="@string/xem_l_ch_s_mua_h_ng"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/black" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lnChoXacNhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="26dp"
                        android:layout_height="30dp"
                        android:background="@drawable/wallet" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choxacnhan"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnCholayHang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="30dp"
                        android:background="@drawable/box" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cholayhang"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnDangGiao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/truck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danggiao"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnDanhGia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/star" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/danhgia"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#93242A"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/doimatkhau"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/changpassword" />

                <TextView
                    android:id="@+id/tvDoiMatKhauMoi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/doimatkhaumoi"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#93242A"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/gioithieu"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_info"
                android:text="@string/tr_gi_p" />

            <TextView
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_lock"
                android:text="@string/ri_ng_t" />

            <TextView
                style="@style/textviewinformation"
                android:drawableLeft="@drawable/ic_document"
                android:text="@string/d_ch_v_v_ch_ch_s_ch" />

            <Button
                android:id="@+id/btnDangXuat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_dangxuat"
                android:text="Đăng xuất"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>