<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivShop"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="#DF3E21"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Hot Hot"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tvNameShop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="Home coffee"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvItemGiohang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ghichu"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:id="@+id/lnThemGhiChu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="1dp"
                android:text="@string/them_ghi_chu"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/edtGhiChu"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:background="@drawable/custom_button_dangxuat"
        android:gravity="top"
        android:hint="@string/ghichu"
        android:inputType="text|textMultiLine"
        android:padding="5dp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/lnMaGiamGia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/gift_code"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edtMaGiamGia"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_dangxuat"
            android:hint="@string/giftcode"
            android:padding="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="@color/green"
            android:text="Áp dụng"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" />




    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#ED4510" />

</LinearLayout>